# nav

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.real  Dockerfile.unitree_agent  README.md  build_real_image.sh  docker-compose.a2.amd64.yml  docker-compose.a2.yml  docker-compose.yml  entrypoint.sh  prompt.md  smoke_test.sh  原生SLAM接入改造Prompt.md
src/a2_bringup/: package.xml  setup.cfg  setup.py
src/a2_bringup/a2_bringup/: runtime_mode.py
src/a2_bringup/launch/: a2_jt128_gazebo_rviz.launch.py  abc_isolation_eval.launch.py  bringup.launch.py  collision_monitor.launch.py  dlio_mapping.launch.py  ekf.launch.py  ekf_local.launch.py  explore.launch.py  jt128_3d_navigation.launch.py  jt128_driver.launch.py  localization.launch.py  mapping.launch.py  nav2.launch.py  nav2_3d.launch.py  octomap_mapping.launch.py  scan_mission.launch.py  scan_mission_mock.launch.py  sensors.launch.py  simple_car_jt128_gazebo_rviz.launch.py  slam.launch.py
src/a2_bringup/resource/: a2_bringup
src/a2_bringup/rviz/: a2_bag_perception_validation.rviz  a2_jt128_nav_tuning.rviz  a2_jt128_perception.rviz  simple_car_jt128_perception.rviz
src/a2_bringup/urdf/: a2_jt128_sim.urdf.xacro  simple_car_jt128_sim.urdf.xacro
src/a2_bringup/worlds/: a2_jt128_perception.world  simple_car_complex_perception.world
src/a2_control_bridge/: CMakeLists.txt  package.xml
src/a2_control_bridge/src/: a2_control_bridge_node.cpp
src/a2_control_bridge/test/: test_control_bridge.cpp
src/a2_diagnostics/: package.xml  setup.cfg  setup.py
src/a2_diagnostics/a2_diagnostics/: diagnostic_aggregator.py  status_adapter_node.py  status_parser.py
src/a2_diagnostics/config/: diagnostic_aggregator.yaml
src/a2_diagnostics/launch/: diagnostics.launch.py
src/a2_ground_segmentation_cpp/: CMakeLists.txt  package.xml
src/a2_ground_segmentation_cpp/config/: ground_segmentation_cpp.yaml
src/a2_ground_segmentation_cpp/launch/: ground_segmentation_cpp.launch.py
src/a2_ground_segmentation_cpp/src/: ground_segmentation_cpp_node.cpp  ground_segmenter.cpp
src/a2_ground_segmentation_cpp/test/: test_ground_segmenter.cpp
src/a2_interfaces/: CMakeLists.txt  package.xml
src/a2_interfaces/action/: RunMission.action
src/a2_interfaces/msg/: ControlState.msg  LightCommand.msg  RobotState.msg
src/a2_interfaces/srv/: ManageMap.srv  MotionCommand.srv  NavCommand.srv
src/a2_regression_tests/: CMakeLists.txt  package.xml
src/a2_regression_tests/config/: regression_thresholds.yaml
src/a2_regression_tests/test/: test_scenarios.py  test_unit_regressions.py
src/a2_sdk_bridge/: CMakeLists.txt  package.xml
src/a2_sdk_bridge/src/: a2_light_bridge_node.cpp  a2_sdk_bridge_node.cpp
src/a2_state_publisher/: CMakeLists.txt  package.xml
src/a2_state_publisher/src/: a2_state_publisher_node.cpp
src/a2_system/: CMakeLists.txt  package.xml
src/a2_system/config/: a2_navigate_3d.xml  a2_navigate_through_poses_3d.xml  a2_sdk.yaml  abc_isolation_eval.rviz  collision_monitor.yaml  collision_monitor_live_validation.yaml  dlio_jt128.yaml  ekf_3d.yaml  ekf_local.yaml  exploration.yaml  extrinsics.yaml  global_traversability_integrator.yaml  ground_segmentation.yaml  jt128_extrinsics.yaml  jt128_front_hesai.yaml  jt128_rosbag_topics.txt  localization.yaml  localization_3d.yaml  map_manager.yaml  motion_limits.yaml  native_map_relay.yaml  nav2.yaml  nav2_3d.yaml  nav2_stack.yaml  ndt_scan_matcher_a2.yaml  network.yaml  occupancy_mapper.yaml  pcd_relocalization_3d.yaml  pointcloud_accumulator.yaml  pointcloud_to_scan.yaml  pose_goal_controller_3d.yaml  real_camera.yaml  real_lidar.yaml  rosbag_topics.txt  safety.yaml  scan_mission.yaml  scan_mission_3d.yaml  scan_waypoints.example.yaml  sensor_sync.yaml  slam.yaml  (+7 more)
src/a2_system/docs/: 09_dwb_3d_navigation.md  10_ekf_sensor_fusion.md  architecture.md  architecture.mermaid  autoware_ndt_adapter_plan.md  fault_tree.md  interface_contracts.md  jt128_real_closed_loop_runbook.md  operations_runbook.md  scan_mission.md  stack_bridge_inventory.md  stack_bridge_sequence.mmd  task_manager.md  three_d_migration_plan.md
src/a2_system/scripts/: a2_battery_publisher.py  abc_isolation_eval.py  analyze_perception_bag.py  append_3d_test_record.py  auto_scan_mission.py  config_schema_check.py  global_traversability_integrator.py  goal_pose_3d_smoke_test.py  imu_to_si_converter.py  industrial_3d_closed_loop_check.py  industrial_3d_nav_preflight.py  jt128_dlio_watchdog.py  mock_scan_mission_harness.py  nav2_corridor_gate.py  nav_contract_check.py  ndt_adapter_dry_run_check.py  octomap_mapping_node.py  octomap_to_2d_grid.py  odometry_tf_broadcaster.py  odometry_to_pose_covariance.py  pcd_to_2d_map.py  pointcloud_preview_node.py  preflight_check.py  sensor_covariance_injector.py  sim_validate_gazebo_perception.py  sim_validate_perception_pipeline.py  sim_validate_simple_car_perception.py  simplified_safety_gate.py  task_manager.py  three_d_migration_audit.py  traversability_to_obstacle_cloud.py
src/a2_system/src/: octomap_to_2d_grid.cpp
src/a2_system/test/: test_a2_perception_obstacle_contract.py  test_a2_unitree_dds_isolation_contract.py  test_abc_isolation_eval.py  test_analyze_perception_bag_tf.py  test_auto_scan_mission.py  test_config_schema_check.py  test_global_traversability_clearing.py  test_global_traversability_default_enabled.py  test_global_traversability_integrator.py  test_imu_to_si_converter.py  test_nav2_3d_recovery_contract.py  test_nav2_corridor_gate.py  test_octomap_mapping_node.py  test_octomap_to_2d_grid_wrapper.py  test_pcd_to_2d_map.py  (+4 more)
src/a2_unitree_agent/: CMakeLists.txt  package.xml
src/a2_unitree_ipc/: CMakeLists.txt  package.xml
src/exploration_manager/: package.xml  setup.cfg  setup.py
src/inspection_task_allocator/: package.xml  setup.py
src/nav2_integration/: package.xml  setup.cfg  setup.py
src/nav2_integration_cpp/: CMakeLists.txt  package.xml
src/nav_health_monitor/: package.xml  setup.cfg  setup.py
src/safety_manager/: package.xml  setup.cfg  setup.py
src/tf_manager/: package.xml  setup.py
src/unitree_api/: CMakeLists.txt  package.xml
(+462 files in other folders)
