<?xml version="1.0"?>
<package format="3">
  <name>a2_control_bridge</name>
  <version>0.1.0</version>
  <description>Converts Nav2 cmd_vel output into Unitree A2 sport commands with safety gating.</description>

  <maintainer email="dell@example.com">dell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>a2_interfaces</depend>
  <depend>a2_system</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
