cmake_minimum_required(VERSION 3.8)
project(a2_interfaces)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/RobotState.msg"
  "msg/ControlState.msg"
  "msg/LightCommand.msg"
  "srv/ManageMap.srv"
  "srv/MotionCommand.srv"
  "srv/NavCommand.srv"
  "srv/SetMode.srv"
  "action/RunMission.action"
  DEPENDENCIES builtin_interfaces geometry_msgs)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
