<?xml version="1.0"?>
<package format="3">
  <name>a2_unitree_ipc</name>
  <version>0.1.0</version>
  <description>Local Unix Domain Socket protocol shared by ROS bridges and the Unitree agent.</description>

  <maintainer email="dell@example.com">dell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
