<?xml version="1.0"?>
<package format="3">
  <name>exploration_manager</name>
  <version>0.1.0</version>
  <description>Exploration manager for automatic office mapping and post-run map save.</description>

  <maintainer email="dell@example.com">dell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>a2_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
