<?xml version="1.0"?>
<package format="3">
  <name>inspection_task_allocator</name>
  <version>0.1.0</version>
  <description>Standalone inspection task allocation simulator for priority-cost mission planning.</description>
  <maintainer email="dell@example.com">dell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
